cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../dataset/june2020_dataset_copy/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:18: error: (required.method.not.called) $$ 4 $$ method close $$ new PrintWriter("log") $$ java.io.PrintWriter $$ regular method exit $$ ( 424, 446 ) $$ @MustCall method close may not have been invoked on new PrintWriter("log") or any of its aliases.
			writer = new PrintWriter("log");
			         ^
  The type of object is: java.io.PrintWriter.
  Reason for going out of scope: regular method exit
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
